[workspace]

members = [
    "branches",
    "converter", "enums-and-patterns",
    "fibonacci",
    "functions",
    "guessing_game",
    "hello_cargo",
    "logging",
    # "hello_world", // This is not a Cargo crate
    "loops",
    "ownership",
    "rectangles",
    "references-and-borrowing",
    "slices",
    "structs",
    "twelve-days-of-christmas",
    "variables",
]

resolver = "1"
