[workspace]

members = [ "backyard",
    "branches",
    "converter", "enums-and-patterns",
    "fibonacci",
    "functions",
    "guessing_game", "hashmaps",
    "hello_cargo",
    "logging",
    # "hello_world", // This is not a Cargo crate
    "loops", "managing-growing-project",
    "ownership",
    "rectangles",
    "references-and-borrowing", "restaurant",
    "slices", "strings",
    "structs",
    "twelve-days-of-christmas",
    "variables", "vectors",
]

resolver = "1"
