[workspace]

members = [
    "adder",
    "backyard",
    "branches",
    "converter",
    "enums-and-patterns",
    "company-challenge",
    "fibonacci",
    "functions",
    "generics-traits",
    "guessing_game",
    "hashmaps",
    "hello_cargo",
    "logging",
    # "hello_world", // This is not a Cargo crate
    "loops",
    "managing-growing-project",
    "median-and-mode-challenge",
    "ownership",
    "pig-latin-challenge",
    "rectangles",
    "references-and-borrowing",
    "restaurant",
    "slices",
    "strings",
    "structs",
    "twelve-days-of-christmas",
    "variables",
    "vectors",
]

resolver = "1"
